<resources>
    <string name="app_name">Task Manager</string>
    <string name="action_settings">Settings</string>
    <string name="none_todo_item_found">There\'s no tasks in this list</string>
    <string name="add_todo_item_activity"></string>
    <string name="done_todo_item_text">Done</string>
    <string name="delete_todo_item_text">Delete</string>
    <string name="name">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="urgent_task">Urgent Task</string>
    <string name="time">Time</string>
    <string name="action_add">Add</string>
    <string name="title_required">Title is requied</string>
    <string name="invalid_date">Date is invalid</string>
    <string name="location">Location</string>
    <string name="notes">Notes</string>
    <string name="todo_item_activity"></string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="task_deleted">Task deleted</string>
    <string name="undo">Undo</string>
    <string name="where">Where</string>
    <string name="priority">Priority</string>
    <string name="add_new_task">Add New Task</string>
    <string name="select_priority">Select Priority</string>
    <string name="priority_high">High</string>
    <string name="priority_normal">Normal</string>
    <string name="todo_item_added">Task added successfully</string>
    <string name="todo_item_edited">Task edited</string>
    <string name="edit_task">Edit Task</string>
    <string name="delete_confirmation_dialog_title">Confirmation</string>
    <string name="delete_confirmation_dialog_message">You will delete this task. Are you sure ?</string>
    <string name="action_cancel">Cancel</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_password">Password should be at least 3 characters long</string>
    <string name="invalid_username">Name cannot be empty</string>
    <string name="creating_account">Creating account...</string>
    <string name="sign_in">Sign In</string>
    <string name="signed_in">Login successful</string>
    <string name="empty_email">Email should not be empty</string>
    <string name="empty_password">Password should not be empty</string>
    <string name="log_in">Log in...</string>

    <plurals name="pending_task">
        <item quantity="one">You have one pending task for today</item>
        <item quantity="other">You have %d pending tasks for today</item>
    </plurals>

    <string name="zero_tasks">0 Tasks</string>

    <plurals name="number_of_tasks">
        <item quantity="zero">0 Tasks</item>
        <item quantity="one">1 Task</item>
        <item quantity="other">%d Tasks</item>
        <item quantity="many">%d Tasks</item>
        <item quantity="few">%d Tasks</item>
    </plurals>

    <plurals name="delete_tag_message">
        <item quantity="one">Are you sure ? If you delete Tag %1$s, %2$d task with this tag will be deleted too.</item>
        <item quantity="other">Are you sure ? If you delete Tag %1$s, %2$d tasks with this tag will be deleted too.</item>
    </plurals>

    <string name="closeDrawer">Close Drawer</string>
    <string name="openDrawer">Open Drawer</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_in_link">Already have a account ? <a href="">Sign in</a></string>
    <string name="create_account">Create Account</string>

    <string name="facebook_app_id" translatable="false">815432791890253</string>
    <string name="sign_up_link">Don\'t have an Account ? <a href="">Sign up</a></string>
    <string name="greetings">Hello</string>
    <string name="settings">Settings</string>
    <string name="tags">Tags</string>
    <string name="congratulation">Congratulation, you have completed all tasks</string>
    <string name="first_time">There is no Tasks in your list. Add your first Task !</string>
    <string name="login_with_facebook">LOGIN WITH FACEBOOK</string>
    <string name="logout">LOGOUT</string>
    <string name="login_with_email">LOGIN WITH EMAIL</string>
    <string name="create_account_with_facebook">SIGN UP WITH FACEBOOK</string>
    <string name="create_account_with_email">SIGN UP WITH EMAIL</string>
    <string name="notifications">Notifications</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="notification_time">Show notification at</string>
    <string name="settings_activity">Settings</string>
    <string name="action_save">Save</string>
    <string name="settings_saved">Settings saved</string>
    <string name="login_activity">Login</string>
    <string name="create_account_activity">Create Account</string>
    <string name="all_tasks">All Tasks</string>
    <string name="tasksByTag">Tag</string>
    <string name="select_tag">Select Tag</string>
    <string name="no_tag">No Tag</string>
    <string name="create_tag">Create new Tag</string>
    <string name="tags_activity">Tags</string>
    <string name="close">Close</string>
    <string name="manage_tags">Manage Tags</string>
    <string name="edit_tag">Edit Tag</string>
    <string name="add_tag">Add Tag</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="tag_name">Tag Name</string>
    <string name="tag_added">Tag added</string>
    <string name="tag_deleted">Tag deleted</string>
    <string name="tag_not_edited">Tag not edited</string>
    <string name="tag_edited">Tag edited</string>
    <string name="delete_tag">Delete Tag</string>
    <string name="tasks_for_today">Tasks for Today</string>
    <string name="late_tasks_group">Late</string>
    <string name="today_tasks_group">Today</string>
    <string name="future_tasks_group">Future</string>
    <string name="task_added">Task added</string>
    <string name="task_edited">Task edited</string>
    <string name="account_created">Account created</string>
    <string name="count_not_create_account">Error, could not create account</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="invalid_email_and_password">Invalid email or password</string>
    <string name="done_tasks_group">Done</string>

    <string-array name="initial_tags">
        <item>Inbox</item>
        <item>Personal</item>
        <item>Work</item>
        <item>Study</item>
    </string-array>
</resources>
