<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/sign_out_menu"
            android:icon="@drawable/ic_exit_to_app_black_24px"
            android:checked="false"
            android:name="@string/sign_out"
            android:title="@string/sign_out"/>

        <item
            android:id="@+id/settings_menu"
            android:icon="@drawable/ic_settings_black_24px"
            android:checked="false"
            android:name="@string/settings"
            android:title="@string/settings"/>

        <item
            android:id="@+id/tags_menu"
            android:icon="@drawable/ic_list_black_24px"
            android:checked="false"
            android:name="@string/manage_tags"
            android:title="@string/manage_tags"/>

    </group>

</menu>