<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              tools:context=".addnewtodoitem.AddNewTodoItemActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/todo_item_fields_margin"
        android:layout_marginLeft="@dimen/todo_item_fields_margin"
        android:layout_marginRight="@dimen/todo_item_fields_margin">

        <EditText
            android:id="@+id/todo_item_title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/title"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/todo_item_fields_margin"
        android:layout_marginRight="@dimen/todo_item_fields_margin"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/todo_item_description_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/description"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/todo_item_fields_margin"
        android:layout_marginRight="@dimen/todo_item_fields_margin"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/todo_item_date_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="false"
            android:inputType="datetime"
            android:hint="@string/date"/>

    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/todo_item_urgent_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/urgent_task"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="@dimen/todo_item_fields_margin"
        android:layout_marginRight="@dimen/todo_item_fields_margin"/>


</LinearLayout>